# minos-documentation

./: .buildinfo  .gitignore  Makefile  README.md  api.html  genindex.html  index.html  introduction.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml
_sources/: api.md.txt  index.md.txt  introduction.md.txt
_sources/architecture/: _toc.md.txt  cqrs.md.txt  data_model.md.txt  decorators.md.txt  events.md.txt  messaging.md.txt  ports_and_adapters.md.txt  saga.md.txt
_sources/quickstart/: _toc.md.txt  aggregate.md.txt  command.md.txt  configuration.md.txt  deployment.md.txt  domain_modeling.md.txt  query.md.txt  saga.md.txt  service.md.txt  setup.md.txt  testing.md.txt
_static/css/: custom.css
architecture/: _toc.html  cqrs.html  data_model.html  decorators.html  events.html  messaging.html  ports_and_adapters.html  request.html  response.html  rest_handler.html  saga.html  transactionality.html
architecture/cqrs/: _toc.html  command_service.html  cqrs.html  diagram.html  query_service.html
architecture/messaging/: _toc.html  command.html  command_reply.html  event.html  introduction.html
architecture/ports_and_adapters/: _toc.html  decorators.html  transactionality.html
docs/: architecture.md  conf.py  index.md  introduction.md  quickstart.md  rest_handler.md
docs/architecture/: _toc.md  data_model.md  decorators.md  (+5 more)
quickstart/: _toc.html  aggregate.html  command.html  configuration.html  deployment.html  domain_modeling.html  installation.html  query.html  saga.html  service.html  setup.html  testing.html
(+64 files in other folders)
